# openfhe-development

./: CMakeLists.txt
src/: AddSub.cu  ConstantsGPU.cu  CudaUtils.cu  NTT.cu  NTTdynamicParallelism.cu  Rotation.cu  VectorGPU.cu
src/CKKS/: ApproxModEval.cu  Bootstrap.cu  BootstrapPrecomputation.cu  Ciphertext.cu  CoeffsToSlots.cu  Context.cu  Conv.cu  ElemenwiseBatchKernels.cu  KeySwitchingKey.cu  Limb.cu  LimbPartition.cu  Plaintext.cu  RNSPoly.cu
src/CKKS/openfhe-interface/: RawCiphertext.cu
src/binfhe/: CMakeLists.txt
src/binfhe/include/: binfhe-base-params.h  binfhe-base-scheme.h  binfhecontext.h  lwe-ciphertext.h  lwe-cryptoparameters.h  lwe-keyswitchkey.h  lwe-privatekey.h  lwe-publickey.h  rgsw-acc-cggi.h  rgsw-acc-dm.h  rgsw-acc-lmkcdey.h  rgsw-acckey.h  rgsw-cryptoparameters.h  rgsw-evalkey.h  rlwe-ciphertext.h
src/binfhe/lib/: binfhe-base-scheme.cpp
src/binfhe/unittest/: UnitTestFHEW.cpp
src/core/: CMakeLists.txt
src/core/include/lattice/: dgsampling.h  (+2 more)
src/core/unittest/: UnitTestBinInt.cpp  UnitTestBlockAllocate.cpp  UnitTestLatticeParams.cpp  UnitTestSTLBlockAllocate.cpp  UnitTestTrapdoor.cpp  UnitTestXallocate.cpp
src/hook/: CMakeLists.txt  hook.cpp  hook.h
src/pke/: CMakeLists.txt
src/pke/include/: ciphertext.h  cryptocontext.h  cryptocontextfactory.h  cryptoobject.h
src/pke/lib/: cryptocontext.cpp
src/pke/unittest/: UnitTestCoexistingCryptocontexts.cpp  UnitTestENCRYPT.cpp  UnitTestEncoding.cpp  UnitTestEvalMult.cpp  UnitTestEvalMultMany.cpp  UnitTestMultihopPRE.cpp  UnitTestMultiparty.cpp  UnitTestPRE.cpp  UnitTestSHE.cpp
(+79 files in other folders)
