add_library(hook STATIC hook.cpp)
set_property(TARGET hook PROPERTY POSITION_INDEPENDENT_CODE 1)

set(HOOK_VERSION_MAJOR ${OPENFHE_VERSION_MAJOR})
set(HOOK_VERSION_MINOR ${OPENFHE_VERSION_MINOR})
set(HOOK_VERSION_PATCH ${OPENFHE_VERSION_PATCH})
set(HOOK_VERSION ${HOOK_VERSION_MAJOR}.${HOOK_VERSION_MINOR}.${HOOK_VERSION_PATCH})

list(APPEND HOOK_INCLUDE_DIRS
		"${CMAKE_CURRENT_SOURCE_DIR}/../core/include"
		"${CMAKE_CURRENT_SOURCE_DIR}/../pke/include"
		"${CMAKE_CURRENT_SOURCE_DIR}/../binfhe/include"
)
set(HOOK_INCLUDE_DIRS "${HOOK_INCLUDE_DIRS}" CACHE INTERNAL "")

target_include_directories(hook PUBLIC ${HOOK_INCLUDE_DIRS})

if ( BUILD_SHARED )
	add_library (OPENFHEhook SHARED $<TARGET_OBJECTS:hook>)
	set_property(TARGET OPENFHEhook PROPERTY VERSION ${HOOK_VERSION})
	set_property(TARGET OPENFHEhook PROPERTY SOVERSION ${HOOK_VERSION_MAJOR})
	set_property(TARGET OPENFHEhook PROPERTY RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
	install(TARGETS OPENFHEhook
		EXPORT OpenFHETargets
		DESTINATION lib)
endif()


if( BUILD_STATIC )
	add_library (OPENFHEhook_static STATIC $<TARGET_OBJECTS:hook>)
	set_property(TARGET OPENFHEhook_static PROPERTY RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
	install(TARGETS OPENFHEhook_static
		EXPORT OpenFHETargets
		DESTINATION lib)
endif()

install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
	DESTINATION include/openfhe)